Change overlay-controls position to top
Updated overlay-controls position to align with the top of the frame.

--- a/Fleur-dOranger/index.html
+++ b/Fleur-dOranger/index.html
@@ -205,7 +205,7 @@
     .overlay-controls {
       position: absolute;
       right: var(--overlay-pad);   /* ✅ CONTROL: move overlay left/right */
-      bottom: var(--overlay-pad);  /* ✅ CONTROL: move overlay up/down */
+      top: var(--overlay-pad);  /* ✅ CONTROL: move overlay up/down, now top aligns to top of frame */
       display: flex;
       flex-direction: column;      /* ✅ CHANGE: STACK buttons vertically */
       gap: var(--overlay-gap);     /* ✅ CONTROL: gap between buttons */
