--- a/Fleur-dOranger/index.html
+++ b/Fleur-dOranger/index.html
@@ -274,40 +274,56 @@ y al mismo tiempo significa
 ‘Khēmeía’ significa ‘fundir metales’, crear nuevas aleaciones.
 .
 .
-.
-Del Egipcio Km, ‘𓆎 ’ o ‘Negro’
-y que da origen a Khem ‘𓆎𓅓𓏏𓊖’ o ‘Tierra Negra’,
-forma de referirse a Egipto,
+Del idioma Egipcio Copto 
+Km, ‘𓆎 ’ o ‘Negro’
+vocablo que da origen a Khem ‘𓆎𓅓𓏏𓊖’ o ‘Tierra Negra’,
+la forma de referirse a Egipto,
 su nombre original,
-el 'Lugar de Tierra Negra' “fértil”
+'Lugar de Tierra Negra' 
+“fértil”
 por el légamo del Nilo,
 en contraste con la tierra roja estéril del desierto.
-
+.
+.
 Del Arábico ‘Al-Kīmiyā'
 en que ‘al’ es el prefijo determinante ‘la’ o ‘el’
 y ‘Kīmiyā' es ‘Ciencia de Transmutación de los Metales’.
-
-En 330 AC cuando Alejandro Magno funda Alejandría, ésta se convierte en el punto de encuentro
+.
+.
+En 330 AC Alejandro Magno funda Alejandría, 
+y ésta ciudad se convierte en el punto de encuentro
 y fusión de las civilizaciones Griega y Egipcia, y posteriormente absorbe las influencias Árabe y Romana.
-
-De la imbricación de la Filosofía griega, la Metalurgia egipcia
-y la Metafísica árabe, surge ‘alchymia’, la primera ciencia/arte
-que busca transformar la materia corriente, la Tierra Negra, el metal común, oscuro y opaco como el plomo, en el metal perfecto, el Oro.
-
-Transformar Negro en Dorado.
-
+.
+.              
+De la unión e imbricación
+de la Filosofía griega, 
+la Metalurgia egipcia
+y la Metafísica árabe, 
+.              
+surge la ‘alchymia’
+.             
+la primera ciencia/arte
+que busca transformar la materia corriente, la Tierra Negra, el metal más común, oscuro y opaco como el plomo, en el metal perfecto, el Oro.
+.
+.              
+Transformar lo Negro en lo Dorado.
+.              
 La alquimia busca transformar la materia en lo sublime,
 busca perfeccionar mediante la fusión experimental,
 en última instancia busca el secreto de la inmortalidad
 (la búsqueda incesante y fallida de la piedra filosofal
 el elemento mágico legendario en la alquimia).
-
-Este perfume fue diseñado y creado para tí, luego de sentir distintas esencias elementales
-y escogiendo un perfil específico que te evoca, floral y anaranjado,
+.
+.              
+Este perfume fue diseñado y creado sólo para tí, luego de explorar y sentir distintas esencias elementales
+y escogiendo un perfil específico que te evoca
+floral y anaranjado, como ver el sol con los párpados cerrados,
 primavera, sol, arena, rubio dorado y dulce.
-
+.
+.              
 Tú
-
+.
+.              
 Le Labo (Laboratorio) es un espacio donde el perfume es fabricado a pedido,
 delante de uno, en un espacio de experimentación creativa,
 combinando esencias y elementos con precisión y rigurosidad técnica,
@@ -327,40 +343,58 @@ que significa ‘fluir’ (Khúma)
 y al mismo tiempo significa
 ‘verter juntos’ (Khéo).
 ‘Khēmeía’ significa ‘fundir metales’, crear nuevas aleaciones.
-
-Del Egipcio Km, ‘𓆎 ’ o ‘Negro’
-y que da origen a Khem ‘𓆎𓅓𓏏𓊖’ o ‘Tierra Negra’,
-forma de referirse a Egipto,
+.
+.
+Del idioma Egipcio Copto 
+Km, ‘𓆎 ’ o ‘Negro’
+vocablo que da origen a Khem ‘𓆎𓅓𓏏𓊖’ o ‘Tierra Negra’,
+la forma de referirse a Egipto,
 su nombre original,
-el 'Lugar de Tierra Negra' “fértil”
+'Lugar de Tierra Negra' 
+“fértil”
 por el légamo del Nilo,
 en contraste con la tierra roja estéril del desierto.
-
+.
+.
 Del Arábico ‘Al-Kīmiyā'
 en que ‘al’ es el prefijo determinante ‘la’ o ‘el’
 y ‘Kīmiyā' es ‘Ciencia de Transmutación de los Metales’.
-
-En 330 AC cuando Alejandro Magno funda Alejandría, ésta se convierte en el punto de encuentro
+.
+.
+En 330 AC Alejandro Magno funda Alejandría, 
+y ésta ciudad se convierte en el punto de encuentro
 y fusión de las civilizaciones Griega y Egipcia, y posteriormente absorbe las influencias Árabe y Romana.
-
-De la imbricación de la Filosofía griega, la Metalurgia egipcia
-y la Metafísica árabe, surge ‘alchymia’, la primera ciencia/arte
-que busca transformar la materia corriente, la Tierra Negra, el metal común, oscuro y opaco como el plomo, en el metal perfecto, el Oro.
-
-Transformar Negro en Dorado.
-
+.
+.              
+De la unión e imbricación
+de la Filosofía griega, 
+la Metalurgia egipcia
+y la Metafísica árabe, 
+.              
+surge la ‘alchymia’
+.             
+la primera ciencia/arte
+que busca transformar la materia corriente, la Tierra Negra, el metal más común, oscuro y opaco como el plomo, en el metal perfecto, el Oro.
+.
+.              
+Transformar lo Negro en lo Dorado.
+.              
 La alquimia busca transformar la materia en lo sublime,
 busca perfeccionar mediante la fusión experimental,
 en última instancia busca el secreto de la inmortalidad
 (la búsqueda incesante y fallida de la piedra filosofal
 el elemento mágico legendario en la alquimia).
-
-Este perfume fue diseñado y creado para tí, luego de sentir distintas esencias elementales
-y escogiendo un perfil específico que te evoca, floral y anaranjado,
+.
+.              
+Este perfume fue diseñado y creado sólo para tí, luego de explorar y sentir distintas esencias elementales
+y escogiendo un perfil específico que te evoca
+floral y anaranjado, como ver el sol con los párpados cerrados,
 primavera, sol, arena, rubio dorado y dulce.
-
+.
+.              
 Tú
-
+.
+.              
 Le Labo (Laboratorio) es un espacio donde el perfume es fabricado a pedido,
 delante de uno, en un espacio de experimentación creativa,
 combinando esencias y elementos con precisión y rigurosidad técnica,
