Update scroll title in index.html

--- a/Fleur-dOranger/index.html
+++ b/Fleur-dOranger/index.html
@@ -264,7 +264,7 @@
           <div class="ticker-track" id="trackA">
             <div class="scroll-text" id="scrollTextA">
               <div class="scroll-spacer"></div>
-              <div class="scroll-title">QUÍMICA</div>
+              <div class="scroll-title">Qué es la QUÍMICA?</div>
 
 Proviene del Latín ‘alchymia’ que a su vez proviene del Griego
 ‘Khēmeía’ (χημεία)
